--- a/app/globals.css
+++ b/app/globals.css
@@ -5,11 +5,7 @@
 /* Custom styles */
 .video {
     width: 100%;
-    border-bottom: 3rem solid #582A2A;
-    border-left: 1rem solid #582A2A;
-    border-right: 1rem solid #582A2A;
-    padding-top: 1rem;
-    background-color: #582A2A;  
+    
 }
 .name {
     font-size: 4vw;
@@ -17,16 +13,17 @@
     font-family: 'Times New Roman', Times, serif;
 }
 .work {
-    font-size: 1vw;
-    color: #ffffff;
-}
-.creative {
     font-size: 2vw;
     color: #ffffff;
     font-family: 'Times New Roman', Times, serif;
 }
+.creative {
+
+    color: #ffffff;
+    font-family: 'Times New Roman', Times, serif;
+}
 .sec {
-    background-color: #320C0C;
+    background-color: #555B5D;
     position: relative;
     padding: 0;
 }
@@ -47,36 +44,10 @@
     font-family: 'Times New Roman', Times, serif;
     color: #320C0C;
 }
-@media (min-width:900px) {
-    .secimg{
-        left:5rem;
-        margin-top: -2rem;
-    }
-}
-@keyframes scroll {
-    0% {
-      transform: translateX(100%);
-    }
-    100% {
-      transform: translateX(-100%);
-    }
-  }
+
+
+
   
-  .animate-scroll {
-    display: flex;
-    animation: scroll 20s linear infinite; /* Adjust the duration as needed */
-    width: 300%; /* Ensure the container is wide enough to hold all images */
-  }
-  
-  .scroll-container {
-    overflow: hidden; /* Hide the overflow to create the scrolling effect */
-    width: 100%; /* Ensure the container takes the full width */
-  }
-  
-  .scroll-image {
-    flex-shrink: 0; /* Prevent images from shrinking */
-    width: 200%; /* Adjust the width of each image */
-  }
   .story{
     font-family: 'Times New Roman', Times, serif;
   }
@@ -95,4 +66,14 @@
   }
   .underline{
     text-decoration: none;
+  }
+  .rectangle {
+    position: absolute;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #484545; /* Semi-transparent black */
+    z-index: 50; /* Ensure it is on top of img4 */
   }
